EVALSYS-951 - Allow free-text questions to be made compulsory

--- a/sakai-evaluation-tool/src/java/org/sakaiproject/evaluation/tool/bundle/messages.properties
+++ b/sakai-evaluation-tool/src/java/org/sakaiproject/evaluation/tool/bundle/messages.properties
@@ -183,6 +183,7 @@ administrate.general.enable.site.published.check=Enable Site (group) publish che
 administrate.general.disable.item.bank=Disable the Item Bank
 administrate.general.disable.question.blocks=Disable Question Blocks
 administrate.general.view.results.ignore.dates.note=View results whilst survey is still open
+administrate.general.allow.required.textitem=Students must answer text items that are required
 administrate.save.settings.button=Save Settings
 administrate.cancel.settings.button=Cancel
 administrate.top.import.data=Import Data
@@ -428,15 +429,18 @@ evalsettings.instructorViewResults.disabled=Results cannot be viewed by instruct
 evalsettings.instructorViewAllResults.label=Instructors can view responses to questions about other instructors.
 evalsettings.instructorViewAllResults.disabled=Instructors cannot view responses to questions about other instructors.
 evalsettings.view.results.date.label=Results viewable after evaluation due/view date
-evalsettings.blankResponsesAllowed.label=Blank non-text question responses allowed
-evalsettings.blankResponsesAllowed.disabled=All non-text questions must be answered
-evalsettings.blank.responses.allowed.note=Participants cannot submit the evaluation without completing all non-text items.
+evalsettings.blankResponsesAllowed.label=Blank question responses allowed
+evalsettings.blankResponsesAllowed.disabled=All questions must be answered
+evalsettings.blank.responses.allowed.note=Participants cannot submit the evaluation without completing all items.
 evalsettings.modifyResponsesAllowed.label=Modification of answers allowed as long as evaluation is not closed
 evalsettings.modifyResponsesAllowed.disabled=Answers cannot be changed after they have been submitted
 evalsettings.modify.responses.allowed.note=Participants may change and resubmit their responses if this is enabled
 evalsettings.allRolesParticipate.label=Allow evaluators to respond
 evalsettings.allRolesParticipate.disabled=Only evaluators may take the survey
 evalsettings.all.roles.participate.note=If assigned to a site then all members will be able to respond to this survey
+evalsettings.text.items.compulsory.note=Students must answer all compulsory free text/essay questions
+evalsettings.compulsoryTextItemsAllowed.label=If compulsory text question exist, they must be answered
+evalsettings.compulsoryTextItemsAllowed.disabled=If compulsory text question exist, they must be answered
 evalsettings.admin.settings.instructions=This setting allows you to give the instructor control over whether to use the evaluation (or simply require them to).
 evalsettings.reminder.settings.header=Evaluation Notifications
 evalsettings.instructor.opt.desc=Instructor opt in setting
