EVALSYS-1499 - Extend administrate-search to enable keyword searching by Assign Group Name

--- a/sakai-evaluation-tool/src/java/org/sakaiproject/evaluation/tool/bundle/messages.properties
+++ b/sakai-evaluation-tool/src/java/org/sakaiproject/evaluation/tool/bundle/messages.properties
@@ -213,7 +213,8 @@ administrate.reset.message=Configuration settings cache has been cleared and rel
 administrate.search.page.title=Administrative Search
 administrate.search.instruction=Search by evaluation title. Search term should be a substring within the title of the evaluation. Matching is case sensitive.  
 administrate.search.breadcrumb.title=Search
-administrate.search.submit.title=Search
+administrate.search.submit.title=Search Eval Titles
+administrate.search.submit.title.group=Search Group Titles
 administrate.search.pager.label=Viewing {0}-{1} of total {2} 
 administrate.search.list.title.title=Title
 administrate.search.list.group.id.title=Group ID
@@ -226,6 +227,7 @@ administrate.search.list.preview=preview
 administrate.search.list.revise=revise
 administrate.search.list.owner=Owner
 administrate.general.local.css.path.note=Local CSS path (includes the CSS at this path on all pages if set, path can be: URL/absolute path/relative path)
+administrate.search.results.max=Too many sites were found and results have been limited to {0} sites.
 
 #Administrative Provider Sync
 administrate.sync.breadcrumb.title=Synchronize Group Memberships
